# ams-agents

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  docker-compose.yml  run_all.sh  run_dev_app.sh
apps/ams-agents/: Cargo.toml  README.md
apps/arpsci/: Cargo.toml  README.md
docs/: Dockerfile  README.md  architecture.md  book.toml  ecosystem.md  mkdocs.yml
docs/src/: architecture.md  configuration.md  conversation-engine.md  index.md  security-and-http-policy.md  startup-and-ui.md
metrics/: README.md  overview_chat.sqlite
platform/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
platform/src/: __init__.py  host_runner_main.py  main.py
platform/src/api/: routes.py  rust_app_runner.py
platform/src/bridge/: __init__.py  runner.py
platform/src/config/: settings.py
platform/src/ui/: app.js  index.html  styles.css
runs/: README.md
runtimes/: README.md
scripts/: build_all.sh  dev.sh  release.sh
src/: adk_integration.rs  agent_conversation_loop.rs  agent_entities.rs  app.rs  entities.rs  http_client.rs  http_policy.rs  lib.rs  main.rs  python_runtime.rs  reproducibility.rs  vault.rs
src/adk_integration/: mod.rs  ollama.rs
src/agents/: agent_conversation_loop.rs  conversation_sidecars.rs  dialogue.rs  mod.rs
src/app/: agent_evaluator_panel.rs  agent_manager_panel.rs  agent_researcher_panel.rs  agent_worker_panel.rs  nodes_panel.rs  nodes_panel_backup.rs  outgoing_http_panel.rs  python_panel.rs  settings_panel.rs
src/metrics/: mod.rs
src/ollama/: client.rs  engine.rs  mod.rs
src/run/: event_ledger.rs  (+1 more)
tests/: README.md
(+77 files in other folders)
