[project]
name = "arpsci-platform"
version = "0.1.0"
description = "FastAPI platform for ARPSCI-Ecosystem"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "httpx>=0.28.0",
  "pydantic-settings>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.uv]
package = false
